# mcp-library

./: README.md  pyproject.toml  schema.sql
src/mcp_library/: __init__.py  database.py  enrichers.py  indexer.py  metadata_extractors.py  server.py
